Minor fix
Signed-off-by: Michael Heinrichs <netopyr@users.noreply.github.com>